--- a/SIH with MySQL/prueba/nbproject/project.properties
+++ b/SIH with MySQL/prueba/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/prueba
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=../../../../Descargas/mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar-1=C:\\Users\\chana\\Downloads\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=/home/camper/Descargas/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.0.0.jar}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
