feat: :sparkles: BBDD
se creo la conexion con la base de datos y se agrego 1 insert a la tabla equipos

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /SIH_with_MySQL/prueba/dist/
 /SIH_with_MySQL/prueba/src/Config.properties
 /HERENCIA_Y_POLIMORFISMO/ejercicio/Deporte/target/
+/Liga_de_baloncesto/baloncesto/nbproject/private/
+/Liga_de_baloncesto/baloncesto/build/
+/Liga_de_baloncesto/baloncesto/dist/
