--- a/Liga_de_baloncesto/baloncesto/src/Config.properties
+++ b/Liga_de_baloncesto/baloncesto/src/Config.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://bsx74d4iq3sqy7lang80-mysql.services.clever-cloud.com:3306/bsx74d4iq3sqy7lang80
-username = usqa5dcqzwovkgu6
-password = SEIeBNIQ8Lzh90ENaVeU
+url = jdbc:mysql://172.16.101.152:3306/baloncesto
+username = root
+password = 1095581647
