feat: :sparkles: atletismo
se resolvio la tarea cumpliendo

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Liga_de_baloncesto/baloncesto/nbproject/private/
 /Liga_de_baloncesto/baloncesto/build/
 /Liga_de_baloncesto/baloncesto/dist/
+/atletismo/Atletismo/target/
