feat: :sparkles: correcion quiz

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /Liga_de_baloncesto/baloncesto/build/
 /Liga_de_baloncesto/baloncesto/dist/
 /atletismo/Atletismo/target/
+/Correcion_quiz_2/correcionquiz2/nbproject/private/
+/Correcion_quiz_2/correcionquiz2/build/
+/Correcion_quiz_2/correcionquiz2/dist/
+/Correcion_quiz_2/DemoBanco/target/
