--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Correcion_quiz_2/correcionquiz2/build/
 /Correcion_quiz_2/correcionquiz2/dist/
 /Correcion_quiz_2/DemoBanco/target/
+/Dia-17/Sistema_de_Facturación/nbproject/private/
