--- a/Dia-17/SistemaFacturacion/build.xml
+++ b/Dia-17/SistemaFacturacion/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Sistema_de_Facturación" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Sistema_de_Facturación.</description>
+<project name="SistemaFacturacion" default="default" basedir=".">
+    <description>Builds, tests, and runs the project SistemaFacturacion.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Sistema_de_Facturación-impl.jar">
+        <target name="run" depends="SistemaFacturacion-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
