--- a/Dia-17/SistemaFacturacion/nbproject/project.properties
+++ b/Dia-17/SistemaFacturacion/nbproject/project.properties
@@ -28,14 +28,17 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Sistema_de_Facturaci_n.jar
+dist.jar=${dist.dir}/SistemaFacturacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Sistema_de_Facturaci_n
+dist.jlink.output=${dist.jlink.dir}/SistemaFacturacion
 excludes=
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\chana\\Downloads\\mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.MyLibrary.classpath}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Sistema_de_Facturaci_n
-main.class=sistema_de_facturaci\u00f3n.Sistema_de_Facturaci\u00f3n
+jlink.launcher.name=SistemaFacturacion
+main.class=sistemafacturacion.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
